--- a/content/_layouts/default.html
+++ b/content/_layouts/default.html
@@ -78,13 +78,14 @@
 
 <body>
     <header>
-        <h1><a href="/">Damian Zaremba</a></h1>
+        <h1><a href="/">Damian Zaremba</a> <span>{{ page.title }}</span></h1>
 
         <nav class="menu">
             <ul class="main">
                <li><a href="/">Blog</a></li>
                <li><a href="/archives">Archives</a></li>
                <li><a href="/about">About</a></li>
+               <li><a href="/cv">CV</a></li>
             </ul>
         </nav>
 
@@ -101,7 +102,7 @@
 </div>
 
 <footer>
-    <p class="copyright">Copyright 2009-{{ site.time | date: "%Y" }} Damian Zaremba</p>
+    <p class="copyright">Copyright 2009-{{ site.time | date: "%Y" }} <a href="http://damianzaremba.co.uk">Damian Zaremba</a></p>
     <p class="ads">
         <ul class="ads">
             <li>Need error logging? Try <a href="https://getsentry.com/signup/r_D0ZW/">Sentry</a></li>
@@ -110,7 +111,6 @@
     </p>
 </footer>
 
-<script src="/assests/js/jquery.fancybox.pack.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
