--- a/content/assests/css/main.css
+++ b/content/assests/css/main.css
@@ -14,6 +14,11 @@ p {
     padding: 5px;
 }
 
+ul li {
+    list-style: circle;
+    
+}
+
 body {
     font-size: 14px;
     background: #FCFCFC;
@@ -29,16 +34,19 @@ div#content {
 h1 {
     font-size: 1.8em;
     color: #258FB8;
+    margin-top: 5px;
 }
 
 h2 {
     font-size: 1.5em;
     color: #258FB8;
+    margin-top: 5px;
 }
 
 h3 {
     font-size: 1.3em;
     color: #258FB8;
+    margin-top: 5px;
 }
 
 /* Header stuff */
@@ -82,15 +90,21 @@ header h1 a {
     color: #258FB8;
 }
 
+header h1 span {
+    color: #585858;
+    font-size: 14px;
+    margin-left: -2px;
+}
+
 /* Header nav stuff */
 header nav {
     margin-top: 20px;
-    margin-left: 10px;
+    margin-left: 5px;
     float: left;
 }
 
 header nav > ul > li {
-    margin-right: 20px;
+    margin-right: 10px;
     display: -moz-inline-box;
     -moz-box-orient: vertical;
     display: inline-block;
@@ -141,7 +155,7 @@ header .search input[type="text"] {
     background: url('/assests/images/search.png') 10px center no-repeat #FCFCFC;
     border: 1px solid #ddd;
     padding: 6px 15px 6px 35px;
-    width: 100px;
+    width: 200px;
     -moz-transition: 0.3s;
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
@@ -282,7 +296,7 @@ ul#archives {
     list-style: none;
 }
 
-ul#archives li {
+ul#archives >li {
     margin-left: 10px;
 }
 
