--- a/content/_layouts/default.html
+++ b/content/_layouts/default.html
@@ -80,8 +80,8 @@
     <header>
         <h1><a href="/">Damian Zaremba</a> <span>{{ page.title }}</span></h1>
 
-        <nav class="menu">
-            <ul class="main">
+        <nav>
+            <ul id="main">
                <li><a href="/">Blog</a></li>
                <li><a href="/archives">Archives</a></li>
                <li><a href="/about">About</a></li>
@@ -104,9 +104,10 @@
 <footer>
     <p class="copyright">Copyright 2009-{{ site.time | date: "%Y" }} <a href="http://damianzaremba.co.uk">Damian Zaremba</a></p>
     <p class="ads">
-        <ul class="ads">
+        <ul id="ads">
             <li>Need error logging? Try <a href="https://getsentry.com/signup/r_D0ZW/">Sentry</a></li>
             <li>Need hosting? Try <a href="http://www.vision108.com/">Vision180</a></li>
+            <li>Want my website? <a href="http://github.com/DamianZaremba/damianzaremba.co.uk/">Source</a></li>
         </ul>
     </p>
 </footer>
