--- a/content/_layouts/category_index.html
+++ b/content/_layouts/category_index.html
@@ -1,12 +1,11 @@
 ---
 layout: default
 ---
-
-<h1 class="category">{{ page.title }}</h1>
-<ul class="posts">
-{% for post in site.categories[page.category] %}
-    <div>{{ post.date | date_to_html_string }}</div>
-    <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-    <div class="categories">Filed under {{ post.categories | category_links }}</div>
-{% endfor %}
-</ul>
+<section id="categories">
+	<h2>{{ page.title }}</h2>
+	<ul id="categories">
+		{% for post in site.categories[page.tag] %}
+		<li>&raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+		{% endfor %}
+	</ul>
+</section>
