--- a/content/_layouts/post.html
+++ b/content/_layouts/post.html
@@ -2,7 +2,19 @@
 layout: default
 ---
 <article class="post">
-    <h1 class="title">{{ page.title }}</h1>
+    <div class="meta">
+        <span><img src="/assests/images/date.png" />{{ page.date | date_to_string }}</span>
+        <span><img src="/assests/images/comments.png" /><a href="{{ page.url }}#disqus_thread">Comments</a></span>
+        {% if page.categories %}
+            <ul id="categories">
+            {% for cat in page.categories %}<li><a href='{{ cat | make_tag_url }}'>{{ cat }}</a></li>{% endfor %}</ul>
+        {% else %}
+            {% if page.tags %}
+                <ul id="categories">
+                {% for tag in page.tags %}<li><a href='{{ tag | make_tag_url }}'>{{ tag }}</a></li>{% endfor %}</ul>
+            {% endif %}
+        {% endif %}
+    </div>
     <div class="entry">
         {{ content }}
     </div>
