--- a/content/_layouts/tag_index.html
+++ b/content/_layouts/tag_index.html
@@ -2,11 +2,11 @@
 layout: default
 ---
 
-<h1 class="tag">{{ page.title }}</h1>
-<ul class="posts">
-{% for post in site.tags[page.tag] %}
-    <div>{{ post.date | date_to_html_string }}</div>
-    <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-    <div class="tags">Filed under {{ post.tags | tag_links }}</div>
-{% endfor %}
-</ul>
+<section id="tags">
+	<h2>{{ page.title }}</h2>
+	<ul id="tags">
+		{% for post in site.tags[page.tag] %}
+		<li>&raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+		{% endfor %}
+	</ul>
+</section>
