--- a/content/_layouts/default.html
+++ b/content/_layouts/default.html
@@ -24,6 +24,7 @@
 
     <!-- CSS files -->
     <link href="/assests/css/main.css" rel="stylesheet" type="text/css" />
+    <link href="/assests/css/pygments.css" rel="stylesheet" type="text/css" />
 
     <!-- JS files -->
     <script src="http://mint.damianzaremba.co.uk/?js" type="text/javascript"></script>
