Adding pygments css, revamping tag/cat pages and general fixes

--- a/content/_layouts/post.html
+++ b/content/_layouts/post.html
@@ -7,11 +7,11 @@ layout: default
         <span><img src="/assests/images/comments.png" /><a href="{{ page.url }}#disqus_thread">Comments</a></span>
         {% if page.categories %}
             <ul id="categories">
-            {% for cat in page.categories %}<li><a href='{{ cat | make_tag_url }}'>{{ cat }}</a></li>{% endfor %}</ul>
+            {% for cat in page.categories %}<li><a href='/category/{{ cat | make_tag_url }}'>{{ cat }}</a></li>{% endfor %}</ul>
         {% else %}
             {% if page.tags %}
                 <ul id="categories">
-                {% for tag in page.tags %}<li><a href='{{ tag | make_tag_url }}'>{{ tag }}</a></li>{% endfor %}</ul>
+                {% for tag in page.tags %}<li><a href='/tag/{{ tag | make_tag_url }}'>{{ tag }}</a></li>{% endfor %}</ul>
             {% endif %}
         {% endif %}
     </div>
