--- a/content/_layouts/category_index.html
+++ b/content/_layouts/category_index.html
@@ -1,11 +1,25 @@
 ---
 layout: default
 ---
-<section id="categories">
-	<h2>{{ page.title }}</h2>
-	<ul id="categories">
-		{% for post in site.categories[page.tag] %}
-		<li>&raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-		{% endfor %}
-	</ul>
-</section>
+
+{% for post in site.categories[page.category] %}
+<article class="post">
+    <h1 class="title"><a href="{{ post.url }}">{{ post.title }}</a></h1>
+    <div class="meta">
+    	<span><img src="/assests/images/date.png" />{{ post.date | date_to_string }}</span>
+    	<span><img src="/assests/images/comments.png" /><a href="{{ post.url }}#disqus_thread">Comments</a></span>
+			{% if post.categories %}
+        	<ul id="categories">
+        	{% for cat in post.categories %}<li><a href='/category/{{ cat | make_tag_url }}'>{{ cat }}</a></li>{% endfor %}</ul>
+    	{% else %}
+    		{% if post.tags %}
+	        	<ul id="categories">
+	        	{% for tag in post.tags %}<li><a href='/tag/{{ tag | make_tag_url }}'>{{ tag }}</a></li>{% endfor %}</ul>
+    		{% endif %}
+        {% endif %}
+    </div>
+    <div class="entry">
+        {{ post.content }}
+    </div>
+</article>
+{% endfor %}
