--- a/content/_layouts/post.html
+++ b/content/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
         <span><img src="/assests/images/comments.png" /><a href="{{ page.url }}#disqus_thread">Comments</a></span>
         {% if page.tags %}
             <ul id="categories">
-            {% for tag in page.tags %}<li><a href='/tag/{{ tag | make_tag_url }}'>{{ tag }}</a></li>{% endfor %}</ul>
+            {% for tag in page.tags %}<li><a href='{{ tag | make_tag_url }}'>{{ tag }}</a></li>{% endfor %}</ul>
         {% endif %}
     </div>
     <div class="entry">
