--- a/content/_layouts/tag_index.html
+++ b/content/_layouts/tag_index.html
@@ -2,19 +2,10 @@
 layout: default
 ---
 
-{% for post in site.tags[page.tag] %}
-<article class="post">
-    <h1 class="title"><a href="{{ post.url }}">{{ post.title }}</a></h1>
-    <div class="meta">
-    	<span><img src="/assests/images/date.png" />{{ post.date | date_to_string }}</span>
-    	<span><img src="/assests/images/comments.png" /><a href="{{ post.url }}#disqus_thread">Comments</a></span>
-		{% if post.tags %}
-        	<ul id="categories">
-        	{% for tag in post.tags %}<li><a href='{{ tag | make_tag_url }}'>{{ tag }}</a></li>{% endfor %}</ul>
-		{% endif %}
-    </div>
-    <div class="entry">
-        {{ post.content }}
-    </div>
-</article>
-{% endfor %}
+<section id="tags">
+    <ul id="tags">
+        {% for post in site.tags[page.tag] %}
+        <li>&raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% endfor %}
+    </ul>
+</section>
