Moving spoon media to correct folder, resizing images and general css tweaks

--- a/content/assests/css/main.css
+++ b/content/assests/css/main.css
@@ -16,7 +16,11 @@ p {
 
 ul li {
     list-style: circle;
-    margin-left: 20px;
+    margin-left: 25px;
+}
+
+ol li {
+    margin-left: 25px;
 }
 
 body {
