--- a/content/assests/css/main.css
+++ b/content/assests/css/main.css
@@ -11,10 +11,7 @@ a {
 }
 
 p {
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-top: 2px;
-    padding-bottom: 2px;
+    padding: 5px;
 }
 
 ul li {
