--- a/content/_layouts/post.html
+++ b/content/_layouts/post.html
@@ -3,10 +3,10 @@ layout: default
 ---
 <article class="post">
     <div class="meta">
-        <span><img src="/assests/images/date.png" />{{ page.date | date_to_string }}</span>
-        <span><img src="/assests/images/comments.png" /><a href="{{ page.url }}#disqus_thread">Comments</a></span>
+        <span><img src="/assests/images/date.png" title="Date" alt="Date" />{{ page.date | date_to_string }}</span>
+        <span><img src="/assests/images/comments.png" title="Content" alt="Content" /><a href="{{ page.url }}#disqus_thread">Comments</a></span>
         {% if page.tags %}
-            <ul id="categories">
+            <ul class="categories">
             {% for tag in page.tags %}<li><a href='{{ tag | make_tag_url }}'>{{ tag }}</a></li>{% endfor %}</ul>
         {% endif %}
     </div>
