--- a/content/_layouts/default.html
+++ b/content/_layouts/default.html
@@ -57,7 +57,8 @@
             <ul id="main">
                <li><a href="/">Blog</a></li>
                <li><a href="/archives">Archives</a></li>
-               <li><a href="/about">About</a></li>
+               <li><a href="/study-notes">Study notes</a></li>
+               <li><a href="/technical-interview-questions">Interview questions</a></li>
                <li><a href="/cv">CV</a></li>
             </ul>
         </nav>
