--- a/content/_layouts/default.html
+++ b/content/_layouts/default.html
@@ -62,6 +62,7 @@
                <!--
                <li><a href="/study-notes">Study notes</a></li>
                <li><a href="/technical-interview-questions">Interview questions</a></li>
+               <li><a href="/projects">Projects</a></li>
                -->
             </ul>
         </nav>
