--- a/content/assests/css/main.css
+++ b/content/assests/css/main.css
@@ -241,7 +241,7 @@ article:last-of-type {
     margin-bottom: 0px;
 }
 
-/* Realted/Comment styles */
+/* Related/Comment styles */
 section#related, section#comment {
     margin-top: 10px;
 }
