--- a/content/_layouts/default.html
+++ b/content/_layouts/default.html
@@ -20,7 +20,7 @@
     <link href="//damianzaremba.co.uk/assests/css/pygments.css" rel="stylesheet" type="text/css" />
 
     <!-- JS files -->
-    <script src="http://mint.damianzaremba.co.uk/?js" type="text/javascript"></script>
+    <script src="//mint.damianzaremba.co.uk/?js" type="text/javascript"></script>
     <script type="text/javascript">
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-11817192-1']);
