--- a/content/_layouts/default.html
+++ b/content/_layouts/default.html
@@ -60,6 +60,7 @@
                <li><a href="/cv">CV</a></li>
                <li><a href="/archives">Archives</a></li>
                <li><a href="/projects">Projects</a></li>
+               <li><a href="/todo">Todo</a></li>
             </ul>
         </nav>
 
