Use secure search

--- a/content/_layouts/default.html
+++ b/content/_layouts/default.html
@@ -81,7 +81,7 @@
                     <img src="//damianzaremba.co.uk/assests/images/rss.png" alt="RSS" />
                 </a>
             </p>
-            <form class="search" action="http://google.com/search" method="get">
+            <form class="search" action="https://google.com/search" method="get">
                 <input class="left" type="text" name="q">
                 <input type="hidden" name="q" value="site:damianzaremba.co.uk">
             </form>
