Update tracking code

--- a/content/_layouts/default.html
+++ b/content/_layouts/default.html
@@ -23,6 +23,7 @@
     <script src="//mint.damianzaremba.co.uk/?js" type="text/javascript"></script>
     <script type="text/javascript">
         var _gaq = _gaq || [];
+        _gaq.push(['_require', 'inpage_linkid', '//www.google-analytics.com/plugins/ga/inpage_linkid.js']);
         _gaq.push(['_setAccount', 'UA-11817192-1']);
         _gaq.push(['_setDomainName', 'damianzaremba.co.uk']);
         _gaq.push(['_trackPageview']);
