--- a/content/_layouts/default.html
+++ b/content/_layouts/default.html
@@ -1,9 +1,12 @@
-<!DOCTYPE HTML>
-<html>
-<head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
     <title>Damian Zaremba - {{ page.title }}</title>
 
     <!-- General meta data -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     {% if page.description %}<meta name="description" content="{{ page.description }}" />{% endif %}
     <meta name="google-site-verification" content="qykIg-4DghoGe78ET4eRjKG1cx6n3gXvu4jF0FvcwRo" />
@@ -16,110 +19,103 @@
     <meta name="robots" content="INDEX,FOLLOW" />
 
     <!-- CSS files -->
-    <link href="//damianzaremba.co.uk/assests/css/main.css" rel="stylesheet" type="text/css" />
-    <link href="//damianzaremba.co.uk/assests/css/pygments.css" rel="stylesheet" type="text/css" />
-
-    <!-- JS files -->
-    <script src="//mint.damianzaremba.co.uk/?js" type="text/javascript"></script>
-    <script type="text/javascript">
-        var _gaq = _gaq || [];
-        _gaq.push(['_require', 'inpage_linkid', '//www.google-analytics.com/plugins/ga/inpage_linkid.js']);
-        _gaq.push(['_setAccount', 'UA-11817192-1']);
-        _gaq.push(['_setDomainName', 'damianzaremba.co.uk']);
-        _gaq.push(['_trackPageview']);
-
-        (function() {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = '//stats.g.doubleclick.net/dc.js'
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
-
-    <!-- IE fixes -->
-    <!--[if IE]>
-    body {
-        behavior: url("//damianzaremba.co.uk/assests/other/hover.htc");
-    }
-    <![endif]-->
+    <link href="{{ cdn_url }}/assests/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ cdn_url }}/assests/css/main.css" rel="stylesheet">
 
     <!--
     RIPA NOTICE: No consent is given for the interception of this page transmission
     -->
-</head>
-<body>
-    <header>
-        <h1><a href="/">Damian Zaremba</a> <span>{{ page.title }}</span></h1>
+  </head>
+  <body>
 
-        <nav>
-            <ul id="main">
-               <li><a href="/">Blog</a></li>
-               <li><a href="/about/">About</a></li>
-               <li><a href="/cv/">CV</a></li>
-               <li><a href="/archives/">Archives</a></li>
-               <li><a href="/projects/">Projects</a></li>
-               <li><a href="/todo/">Todo</a></li>
-            </ul>
-        </nav>
-
-        <div id="right">
-            <p>
-                <a href="http://twitter.com/DamianZaremba">
-                    <img src="//damianzaremba.co.uk/assests/images/twitter.png" alt="Twitter" />
-                </a>
-                <a href="https://plus.google.com/110559147647328161061">
-                    <img src="//damianzaremba.co.uk/assests/images/googleplus.png" alt="GooglePlus" />
-                </a>
-                <a href="http://facebook.com/DamianZaremba">
-                    <img src="//damianzaremba.co.uk/assests/images/facebook.png" alt="Facebook" />
-                </a>
-                <a href="https://github.com/DamianZaremba">
-                    <img src="//damianzaremba.co.uk/assests/images/github.png" alt="GitHub" />
-                </a>
-                <a href="http://feeds.feedburner.com/DamianZaremba">
-                    <img src="//damianzaremba.co.uk/assests/images/rss.png" alt="RSS" />
-                </a>
-            </p>
-            <form class="search" action="https://google.com/search" method="get">
-                <input class="left" type="text" name="q">
-                <input type="hidden" name="q" value="site:damianzaremba.co.uk">
-            </form>
+    <!-- Header -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Open navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">Damian Zaremba</a>
         </div>
-</header>
+        <div id="navbar">
+          <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+              <li class="{% if page.url != '/about/index.html' and page.url != '/cv/index.html' and page.url != '/archives/index.html' and page.url != '/projects/index.html' and page.url != '/todo/index.html' %}active{% endif %}"><a href="/">Blog</a></li>
+              <li class="{% if page.url == '/about/index.html' %}active{% endif %}"><a href="/about/">About</a></li>
+              <li class="{% if page.url == '/cv/index.html' %}active{% endif %}"><a href="/cv/">CV</a></li>
+              <li class="{% if page.url == '/archives/index.html' %}active{% endif %}"><a href="/archive/">Archive</a></li>
+              <li class="{% if page.url == '/projects/index.html' %}active{% endif %}"><a href="/projects/">Projects</a></li>
+              <li class="{% if page.url == '/todo/index.html' %}active{% endif %}"><a href="/todo/">Todo</a></li>
+            </ul>
 
-<div id="content">
+            <div class="social-icons navbar-right">
+              <a href="https://github.com/DamianZaremba">
+                <img class="github" src="{{ cdn_url }}/assests/images/github.png" alt="GitHub" />
+              </a>
+              <a href="http://twitter.com/DamianZaremba">
+                <img class="twitter" src="{{ cdn_url }}/assests/images/twitter.png" alt="Twitter" />
+              </a>
+              <a href="http://feeds.feedburner.com/DamianZaremba">
+                <img class="rss" src="{{ cdn_url }}/assests/images/rss.png" alt="RSS" />
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Page -->
+    <div class="container">
 {{ content }}
-</div>
+    </div>
 
-<footer>
-    <p class="copyright">Copyright 2009-{{ site.time | date: "%Y" }} <a href="http://damianzaremba.co.uk">Damian Zaremba</a></p>
-    <ul id="ads">
-        <li>Need error logging? Try <a href="https://getsentry.com/signup/r_D0ZW/">Sentry</a></li>
-        <li>Need cloud instances? Jump on <a href="http://www.bigv.io">BigV</a></li>
-        <li>Want my website? <a href="https://github.com/DamianZaremba/damianzaremba.co.uk/">Source</a></li>
-    </ul>
-</footer>
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">Copyright 2009-{{ site.time | date: "%Y" }} <a href="http://damianzaremba.co.uk">Damian Zaremba</a></p>
+        <ul id="ads">
+          <li>Need error logging? Try <a href="https://getsentry.com/signup/r_D0ZW/">Sentry</a></li>
+          <li>Need cloud instances? Jump on <a href="http://www.bigv.io">BigV</a></li>
+          <li>Want my website? <a href="https://github.com/DamianZaremba/damianzaremba.co.uk/">Source</a></li>
+        </ul>
+      </div>
+    </footer>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-<!--[if lt IE 9]>
-<script src="//damianzaremba.co.uk/assests/js/html5.js"></script>
-<![endif]-->
+    <!-- JS scripts -->
+    <script src="{{ cdn_url }}/assests/js/jquery.min.js"></script>
+    <script src="{{ cdn_url }}/assests/js/bootstrap.min.js"></script>
 
-<script type="text/javascript">
-    !window.jQuery && document.write(unescape('%3Cscript src="//damianzaremba.co.uk/assests/js/jquery.js"%3E%3C/script%3E'))
+    <script src="//mint.damianzaremba.co.uk/?js" type="text/javascript"></script>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_require', 'inpage_linkid', '//www.google-analytics.com/plugins/ga/inpage_linkid.js']);
+      _gaq.push(['_setAccount', 'UA-11817192-1']);
+      _gaq.push(['_setDomainName', 'damianzaremba.co.uk']);
+      _gaq.push(['_trackPageview']);
 
-    var disqus_shortname = 'damianzaremba';
-    var disqus_script = 'count.js';
+      (function() {
+        var ga = document.createElement('script');
+        ga.type = 'text/javascript';
+        ga.async = true;
+        ga.src = '//stats.g.doubleclick.net/dc.js'
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(ga, s);
+      })();
 
-    (function () {
+      (function () {
         var dsq = document.createElement('script');
         dsq.type = 'text/javascript';
         dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/' + disqus_script;
+        dsq.src = '//damianzaremba.disqus.com/count.js';
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    }());
-</script>
-</body>
+      }());
+    </script>
+
+    <!--[if lt IE 9]>
+      <script src="{{ cdn_url }}/assests/js/html5shiv.min.js"></script>
+      <script src="{{ cdn_url }}/assests/js/respond.min.js"></script>
+    <![endif]-->
+  </body>
 </html>
