--- a/content/assests/css/main.css
+++ b/content/assests/css/main.css
@@ -1,338 +1,176 @@
 /* General stuff */
-* {
-    margin: 0;
-    padding: 0;
-}
-
-a {
-    text-decoration: none;
-    outline-width: 0;
-    color: #258fb8;
-}
-
-p {
-    padding: 5px;
-}
-
-ul li {
-    list-style: circle;
-    margin-left: 25px;
-}
-
-ol li {
-    margin-left: 25px;
+html {
+  position: relative;
+  min-height: 100%;
 }
 
 body {
-    font-size: 14px;
-    background: #FCFCFC;
-    color: #000;
+  margin-bottom: 70px;
 }
 
-div#content {
-    margin: 0 auto;
-    width: 1000px;
-}
-
-/* H styles */
-h1 {
-    font-size: 1.8em;
-    color: #258FB8;
-    margin-top: 10px;
-}
-
-h2 {
-    font-size: 1.5em;
-    color: #258FB8;
-    margin-top: 10px;
-}
-
-h3 {
-    font-size: 1.3em;
-    color: #258FB8;
-    margin-top: 10px;
+body > .container {
+  padding: 60px 15px 0;
 }
 
 /* Header stuff */
-header {
-    margin: 0 auto;
-    width: 1000px;
-    height: 40px;
-    padding: 20px 0 20px;
-    line-height: 40px;
-    position: relative;
-    border-bottom: 1px solid #ddd;
-    margin-bottom: 10px;
-}
-
-header #right {
-    position: absolute;
-    top: 5px;
-    margin-right: 10px;
-    right: 0;
-}
-
-header a {
-    color: #000;
-    -moz-transition: 0.3s;
-    -webkit-transition: 0.3s;
-    -o-transition: 0.3s;
-    transition: 0.3s;
-}
-
-header a: hover {
-    color: #258fb8;
-}
-
-header h1 {
-    position: absolute;
-    top: 10px;
-    left: 5px;
-    font-weight: 800;
-    font-size: 30px;
-}
-
-header h1 a {
-    color: #258FB8;
-}
-
-header h1 span {
-    color: #585858;
-    font-size: 14px;
-    margin-left: -2px;
-}
-
-/* Header nav stuff */
-header nav {
-    margin-top: 28px;
-    margin-left: 5px;
-    float: left;
-}
-
-ul#main li {
-    margin-left: 0px;
-    margin-right: 10px;
-    display: -moz-inline-box;
-    -moz-box-orient: vertical;
-    display: inline-block;
-    vertical-align: middle;
-    *vertical-align: auto;
-}
-
-ul#main li {
-    *display: inline;
-}
-
-ul#main li: last-of-type {
-    margin-right: 0;
-}
-
-ul#main li: hover > a {
-    color: #258fb8;
-}
-
-/* Header search styles */
-header nav select {
+/*@media(max-width: 992px) {
+  .social-icons {
     display: none;
-    margin-bottom: 10px;
+  }
+}*/
+
+.social-icons a img {
+  margin-top: 4px;
+  width: 40px;
 }
 
-header .search input[type="text"] {
-    background: url('/assests/images/search.png') 10px center no-repeat #FCFCFC;
-    border: 1px solid #ddd;
-    padding: 6px 15px 6px 30px;
-    width: 150px;
-    -moz-transition: 0.3s;
-    -webkit-transition: 0.3s;
-    -o-transition: 0.3s;
-    transition: 0.3s;
-    -moz-border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -o-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -khtml-border-radius: 15px;
-    border-radius: 15px;
-    outline: none;
+.social-icons a img.github {
+  width: 40px;
+  margin-right: 6px;
 }
 
 /* Footer stuff */
-footer {
-    margin: 0 auto;
-    width: 1000px;
-    padding: 15px 0;
-    border-top: 1px solid #ddd;
-    text-align: center;
-    font-size: 0.9em;
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #f5f5f5;
+  text-align: center;
 }
 
 /* Footer ads stuff */
 ul#ads li {
-    margin-left: 0px;
-    display: -moz-inline-box;
-    -moz-box-orient: vertical;
-    display: inline-block;
-    vertical-align: middle;
-    *vertical-align: auto;
+  margin-left: 0px;
+  display: -moz-inline-box;
+  -moz-box-orient: vertical;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
 }
 
 ul#ads li {
-    *display: inline;
+  *display: inline;
 }
 
 ul#ads li:after {
-    content: " | ";
+  content: " | ";
 }
 
 ul#ads li:last-of-type:after {
-    content: "";
-}
-
-/* Page nav styles */
-#page_nav {
-    padding: 10px 0;
-    margin-top: 10px;
-    height: 10px;
-    line-height: 10px;
-    position: relative;
-    border-top: 1px solid #ddd;
-}
-
-#page_nav a: hover {
-    text-decoration: underline;
-}
-
-#page_nav a.next {
-    padding-right: 5px;
-    right: 0;
-    position: absolute;
-}
-
-#page_nav a.prev {
-    padding-left: 5px;
-    left: 0;
-    position: absolute;
-}
-
-/* Article pre styles */
-article pre {
-    background: #ddd;
-    border: 1px solid #C0C0C0;
-    padding: 5px 15px;
-    margin-top: 10px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -o-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -khtml-border-radius: 5px;
-    border-radius: 5px;
-    overflow-x: auto;
-    display: block;
+  content: "";
 }
 
 /* Article styles */
 article {
-    border-bottom: 1px solid #ddd;
-    margin-bottom: 10px;
-    margin-top: 10px;
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 article:last-of-type {
-    border-bottom: 0px;
-    margin-bottom: 0px;
+  border-bottom: 0px;
+  margin-bottom: 0px;
+}
+
+article div.entry {
+  margin-top: 5px;
 }
 
 /* Related/Comment styles */
 section#related, section#comment {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 ul#related_posts li {
-	margin-left: 5px;
-    list-style: none;
+  margin-left: 5px;
+  list-style: none;
 }
 
 div#disqus_thread iframe {
-	margin-left: 5px;
+  margin-left: 5px;
 }
 
 /* Archive styles */
-ul#archives li {
-    list-style: none;
-    margin-left: 5px;
+ul#archive li {
+  list-style: none;
+  margin-left: 5px;
 }
 
-ul#archives h2 {
-    margin-top: 10px;
+ul#archive h2 {
+  margin-top: 10px;
 }
 
-ul#archives h2:first-of-type {
-    margin-top: 0px;
+ul#archive h2:first-of-type {
+  margin-top: 0px;
 }
 
 /* Post meta style stuff */
 article.post .meta {
-    margin-left: 5px;
+  margin-left: 5px;
 }
 
 article.post .meta img {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 article.post .meta span {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 article.post .meta span:last-of-type {
-    margin-right: 0px;
+  margin-right: 0px;
 }
 
 article.post .meta ul.categories {
-    background: url('/assests/images/categories.png') left top no-repeat;
-    padding-left : 20px;
-    margin-left: 5px;
-    display: inline;
+  background: url('/assests/images/categories.png') left top no-repeat;
+  padding-left : 20px;
+  margin-left: 5px;
+  display: inline;
 }
 
 article.post .meta ul.categories li {
-    display: inline;
-    list-style: none;
-    margin-left: 0px;
+  display: inline;
+  list-style: none;
+  margin-left: 0px;
 }
 
 article.post .meta ul.categories li:after {
-    content: ", ";
+  content: ", ";
 }
 
 article.post .meta ul.categories li:last-of-type:after {
-    content: "";
+  content: "";
 }
 
 /* Tag/Cat style stuff */
 ul#tags li, ul.categories li {
-    list-style: none;
-    margin-left: 0px;
+  list-style: none;
+  margin-left: 0px;
 }
 
-/* Social style stuff */
-header div#right p {
-    top: 3px;
-    margin-bottom: -10px;
-    padding: 0px;
-    text-align: center;
+/* Page nav styles */
+#page_nav {
+  padding: 10px 0;
+  margin-top: 10px;
+  height: 10px;
+  line-height: 10px;
+  position: relative;
+  border-top: 1px solid #ddd;
 }
 
-header div#right p a {
-    margin-right: 10px;
+#page_nav a: hover {
+  text-decoration: underline;
 }
 
-header div#right p a:last-of-type {
-    margin-right: 0px;
+#page_nav a.next {
+  padding-right: 5px;
+  right: 0;
+  position: absolute;
 }
 
-header div#right p a img {
-    border: 0px;
-}
-
-header div#right p a:hover {
-    text-decoration: none;
+#page_nav a.prev {
+  padding-left: 5px;
+  left: 0;
+  position: absolute;
 }
