--- a/content/_layouts/post.html
+++ b/content/_layouts/post.html
@@ -35,16 +35,14 @@ layout: default
 </section>
 
 <script type="text/javascript">
-    var disqus_shortname = 'damianzaremba';
     var disqus_identifier = 'http://damianzaremba.co.uk{{ page.url }}';
     var disqus_url = 'http://damianzaremba.co.uk{{ page.url }}';
-    var disqus_script = 'embed.js';
 
     (function () {
         var dsq = document.createElement('script');
         dsq.type = 'text/javascript';
         dsq.async = true;
-        dsq.src = 'http://' + disqus_shortname + '.disqus.com/' + disqus_script;
+        dsq.src = 'http://damianzaremba.disqus.com/embed.js';
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
     }());
 </script>
