--- a/content/_layouts/default.html
+++ b/content/_layouts/default.html
@@ -25,6 +25,7 @@
     <!--
     RIPA NOTICE: No consent is given for the interception of this page transmission
     -->
+    <script src="//cdn.optimizely.com/js/2661290018.js"></script>
   </head>
   <body>
 
@@ -51,11 +52,11 @@
             </ul>
 
             <div class="social-icons navbar-right">
-              <a href="https://github.com/DamianZaremba">
-                <img class="github" src="{{ cdn_url }}/assests/images/github.png" alt="GitHub" />
-              </a>
               <a href="http://twitter.com/DamianZaremba">
                 <img class="twitter" src="{{ cdn_url }}/assests/images/twitter.png" alt="Twitter" />
+              </a>
+              <a href="https://github.com/DamianZaremba">
+                <img class="github" src="{{ cdn_url }}/assests/images/github.png" alt="GitHub" />
               </a>
               <a href="http://feeds.feedburner.com/DamianZaremba">
                 <img class="rss" src="{{ cdn_url }}/assests/images/rss.png" alt="RSS" />
