--- a/content/_layouts/post.html
+++ b/content/_layouts/post.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <article class="post">
+    <h1 class="title"><a href="{{ page.url }}">{{ page.title }}</a></h1>
     <div class="meta">
         <span><img src="/assests/images/date.png" title="Date" alt="Date" />{{ page.date | date_to_string }}</span>
         <span><img src="/assests/images/comments.png" title="Content" alt="Content" /><a href="{{ page.url }}#disqus_thread">Comments</a></span>
