Fix archive tab

--- a/content/_layouts/default.html
+++ b/content/_layouts/default.html
@@ -43,7 +43,7 @@
         <div id="navbar">
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li class="{% if page.url != '/about/index.html' and page.url != '/cv/index.html' and page.url != '/archives/index.html' and page.url != '/projects/index.html' and page.url != '/todo/index.html' %}active{% endif %}"><a href="/">Blog</a></li>
+              <li class="{% if page.url != '/about/index.html' and page.url != '/cv/index.html' and page.url != '/archive/index.html' and page.url != '/projects/index.html' and page.url != '/todo/index.html' %}active{% endif %}"><a href="/">Blog</a></li>
               <li class="{% if page.url == '/about/index.html' %}active{% endif %}"><a href="/about/">About</a></li>
               <li class="{% if page.url == '/cv/index.html' %}active{% endif %}"><a href="/cv/">CV</a></li>
               <li class="{% if page.url == '/archives/index.html' %}active{% endif %}"><a href="/archive/">Archive</a></li>
