--- a/content/_layouts/tag_index.html
+++ b/content/_layouts/tag_index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <section id="tags">
+	<h1 class="title"><a href="{{ page.url }}">Pages tagged {{ page.tag }}</a></h1>
     <ul id="tags">
         {% for post in site.tags[page.tag] %}
         <li>&raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
