--- a/content/_layouts/default.html
+++ b/content/_layouts/default.html
@@ -42,12 +42,12 @@
         <div id="navbar">
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li class="{% if page.url != '/about/index.html' and page.url != '/cv/index.html' and page.url != '/archive/index.html' and page.url != '/projects/index.html' and page.url != '/todo/index.html' %}active{% endif %}"><a href="/">Blog</a></li>
-              <li class="{% if page.url == '/about/index.html' %}active{% endif %}"><a href="/about/">About</a></li>
-              <li class="{% if page.url == '/cv/index.html' %}active{% endif %}"><a href="/cv/">CV</a></li>
-              <li class="{% if page.url == '/archives/index.html' %}active{% endif %}"><a href="/archive/">Archive</a></li>
-              <li class="{% if page.url == '/projects/index.html' %}active{% endif %}"><a href="/projects/">Projects</a></li>
-              <li class="{% if page.url == '/todo/index.html' %}active{% endif %}"><a href="/todo/">Todo</a></li>
+              <li class="{% if page.url != '/about/' and page.url != '/cv/' and page.url != '/archive/' and page.url != '/projects/' and page.url != '/todo/' %}active{% endif %}"><a href="/">Blog</a></li>
+              <li class="{% if page.url == '/about/' %}active{% endif %}"><a href="/about/">About</a></li>
+              <li class="{% if page.url == '/cv/' %}active{% endif %}"><a href="/cv/">CV</a></li>
+              <li class="{% if page.url == '/archive/' %}active{% endif %}"><a href="/archive/">Archive</a></li>
+              <li class="{% if page.url == '/projects/' %}active{% endif %}"><a href="/projects/">Projects</a></li>
+              <li class="{% if page.url == '/todo/' %}active{% endif %}"><a href="/todo/">Todo</a></li>
             </ul>
 
             <div class="social-icons navbar-right">
