--- a/content/_layouts/post.html
+++ b/content/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
     <div class="meta">
         <span><img src="{% cdn_url /assests/images/date.png %}" title="Date" alt="Date" />{{ page.date | date_to_string }}</span>
         <span><img src="{% cdn_url /assests/images/comments.png %}" title="Content" alt="Content" /><a href="{{ page.url }}#disqus_thread">Comments</a></span>
-        {% if page.tags %}
+        {% if page.tags and page.tags.size > 0 %}
             <ul class="categories">
             {% for tag in page.tags %}<li><a href='{{ tag | make_tag_url }}'>{{ tag }}</a></li>{% endfor %}</ul>
         {% endif %}
