--- a/content/_layouts/default.html
+++ b/content/_layouts/default.html
@@ -75,7 +75,7 @@
       <div class="container">
         <p class="text-muted">Copyright 2009-{{ site.time | date: "%Y" }} <a href="http://damianzaremba.co.uk">Damian Zaremba</a></p>
         <ul id="ads">
-          <li>Need error logging? Try <a href="https://getsentry.com/signup/r_D0ZW/">Sentry</a></li>
+          <li>Need error tracking? Try <a href="https://getsentry.com/signup/r_D0ZW/">Sentry</a></li>
           <li>Need cloud instances? Jump on <a href="http://www.bigv.io">BigV</a></li>
           <li>Want my website? <a href="https://github.com/DamianZaremba/damianzaremba.co.uk/">Source</a></li>
         </ul>
