Update to the latest gems

--- a/content/_layouts/default.html
+++ b/content/_layouts/default.html
@@ -19,8 +19,8 @@
     <meta name="robots" content="INDEX,FOLLOW" />
 
     <!-- CSS files -->
-    <link href="{% cdn_url /assests/css/bootstrap.min.css %}" rel="stylesheet">
-    <link href="{% cdn_url /assests/css/main.css %}" rel="stylesheet">
+    <link href="/assests/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assests/css/main.css" rel="stylesheet">
 
     <!--
     RIPA NOTICE: No consent is given for the interception of this page transmission
@@ -50,14 +50,14 @@
           </ul>
 
           <div class="social-icons navbar-right visible-md visible-lg">
-            <a href="http://twitter.com/DamianZaremba">
-              <img class="twitter" src="{% cdn_url /assests/images/twitter.png %}" alt="Twitter" />
+            <a href="https://twitter.com/DamianZaremba">
+              <img class="twitter" src="/assests/images/twitter.png" alt="Twitter" />
             </a>
             <a href="https://github.com/DamianZaremba">
-              <img class="github" src="{% cdn_url /assests/images/github.png %}" alt="GitHub" />
+              <img class="github" src="/assests/images/github.png" alt="GitHub" />
             </a>
-            <a href="http://feeds.feedburner.com/DamianZaremba">
-              <img class="rss" src="{% cdn_url /assests/images/rss.png %}" alt="RSS" />
+            <a href="https://feeds.feedburner.com/DamianZaremba">
+              <img class="rss" src="/assests/images/rss.png" alt="RSS" />
             </a>
           </div>
         </div>
@@ -82,8 +82,8 @@
     </footer>
 
     <!-- JS scripts -->
-    <script src="{% cdn_url /assests/js/jquery.min.js %}"></script>
-    <script src="{% cdn_url /assests/js/bootstrap.min.js %}"></script>
+    <script src="/assests/js/jquery.min.js"></script>
+    <script src="/assests/js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
@@ -111,8 +111,8 @@
     </script>
 
     <!--[if lt IE 9]>
-      <script src="{% cdn_url /assests/js/html5shiv.min.js %}"></script>
-      <script src="{% cdn_url /assests/js/respond.min.js %}"></script>
+      <script src="/assests/js/html5shiv.min.js"></script>
+      <script src="/assests/js/respond.min.js"></script>
     <![endif]-->
   </body>
 </html>
