--- a/content/_layouts/tag_index.html
+++ b/content/_layouts/tag_index.html
@@ -1,12 +1,21 @@
 ---
 layout: default
 ---
+{% for post in site.tags[page.tag] %}
+    {% unless post.next %}
+        <h2>{{ post.date | date: '%Y' }}</h2>
+        <ul id="archive">
+    {% else %}
 
-<section id="tags">
-	<h1 class="title"><a href="{{ page.url }}">Pages tagged {{ page.tag }}</a></h1>
-    <ul id="tags">
-        {% for post in site.tags[page.tag] %}
-        <li>&raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-        {% endfor %}
-    </ul>
-</section>
+        {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
+        {% capture nyear %}{{ post.next.date | date: '%Y' }}{% endcapture %}
+        {% if year != nyear %}
+            </ul>
+            <h2>{{ post.date | date: '%Y' }}</h2>
+            <ul id="archive">
+        {% endif %}
+    {% endunless %}
+
+    <li>&raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+{% endfor %}
+</ul>
