--- a/content/_layouts/default.html
+++ b/content/_layouts/default.html
@@ -5,8 +5,7 @@
 
     <!-- General meta data -->
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     {% if page.description %}<meta name="description" content="{{ page.description }}" />{% endif %}
     <meta name="google-site-verification" content="qykIg-4DghoGe78ET4eRjKG1cx6n3gXvu4jF0FvcwRo" />
@@ -19,100 +18,50 @@
     <meta name="robots" content="INDEX,FOLLOW" />
 
     <!-- CSS files -->
-    <link href="/assests/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/assests/css/main.css" rel="stylesheet">
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/css/main.css" rel="stylesheet">
+    <link href="/assets/css/pygments-github.css" rel="stylesheet">
 
     <!--
     RIPA NOTICE: No consent is given for the interception of this page transmission
     -->
   </head>
   <body>
-
-    <!-- Header -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <main>
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Damian Zaremba</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="{% if page.url != '/about/' and page.url != '/cv/' and page.url != '/archive/' and page.url != '/projects/' %}active{% endif %}"><a href="/">Blog</a></li>
-            <li class="{% if page.url == '/about/' %}active{% endif %}"><a href="/about/">About</a></li>
-            <li class="{% if page.url == '/cv/' %}active{% endif %}"><a href="/cv/">CV</a></li>
-            <li class="{% if page.url == '/archive/' %}active{% endif %}"><a href="/archive/">Archive</a></li>
-            <li class="{% if page.url == '/projects/' %}active{% endif %}"><a href="/projects/">Projects</a></li>
+        <!-- Header -->
+        <header class="d-flex flex-wrap justify-content-center py-2 mb-2 border-bottom">
+          <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <span class="fs-4">Damian Zaremba</span>
+          </a>
+          <ul class="nav">
+            <li class="nav-item"><a class="nav-link{% if page.url != '/about/' and page.url != '/cv/' and page.url != '/archive/' and page.url != '/projects/' %} text-bg-primary{% endif %}" href="/">Blog</a></li>
+            <li class="nav-item"><a class="nav-link{% if page.url == '/about/' %} text-bg-primary{% endif %}" href="/about/">About</a></li>
+            <li class="nav-item"><a class="nav-link{% if page.url == '/cv/' %} text-bg-primary{% endif %}" href="/cv/">CV</a></li>
+            <li class="nav-item"><a class="nav-link{% if page.url == '/archive/' %} text-bg-primary{% endif %}" href="/archive/">Archive</a></li>
+            <li class="nav-item"><a class="nav-link{% if page.url == '/projects/' %} text-bg-primary{% endif %}" href="/projects/">Projects</a></li>
           </ul>
+        </header>
 
-          <div class="social-icons navbar-right visible-md visible-lg">
-            <a href="https://twitter.com/DamianZaremba">
-              <img class="twitter" src="/assests/images/twitter.png" alt="Twitter" />
-            </a>
-            <a href="https://github.com/DamianZaremba">
-              <img class="github" src="/assests/images/github.png" alt="GitHub" />
-            </a>
-            <a href="https://feeds.feedburner.com/DamianZaremba">
-              <img class="rss" src="/assests/images/rss.png" alt="RSS" />
-            </a>
-          </div>
-        </div>
-      </div>
-    </nav>
-
-    <!-- Page -->
-    <div class="container">
+        <!-- Page -->
 {{ content }}
-    </div>
 
-    <!-- Footer -->
-    <footer class="footer">
-      <div class="container">
-        <p class="text-muted">Copyright 2009-{{ site.time | date: "%Y" }} <a href="http://damianzaremba.co.uk">Damian Zaremba</a></p>
-        <ul id="ads">
-          <li>Need error tracking? Try <a href="https://getsentry.com/signup/r_D0ZW/">Sentry</a></li>
-          <li>Need cloud instances? Jump on <a href="http://www.bigv.io">BigV</a></li>
-          <li>Want my website? <a href="https://github.com/DamianZaremba/damianzaremba.co.uk/">Source</a></li>
-        </ul>
+        <!-- Footer -->
+        <footer class="mt-2">
+          <p class="text-center text-body-secondary">Copyright 2009-{{ site.time | date: "%Y" }} <a href="http://damianzaremba.co.uk">Damian Zaremba</a></p>
+        </footer>
       </div>
-    </footer>
+    </main>
 
     <!-- JS scripts -->
-    <script src="/assests/js/jquery.min.js"></script>
-    <script src="/assests/js/bootstrap.min.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
 
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_require', 'inpage_linkid', '//www.google-analytics.com/plugins/ga/inpage_linkid.js']);
-      _gaq.push(['_setAccount', 'UA-11817192-1']);
-      _gaq.push(['_setDomainName', 'damianzaremba.co.uk']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script');
-        ga.type = 'text/javascript';
-        ga.async = true;
-        ga.src = '//stats.g.doubleclick.net/dc.js'
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(ga, s);
-      })();
-
-      (function () {
-        var dsq = document.createElement('script');
-        dsq.type = 'text/javascript';
-        dsq.async = true;
-        dsq.src = '//damianzaremba.disqus.com/count.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-      }());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W7DHGHMD7H"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){ dataLayer.push(arguments); }
+      gtag('js', new Date());
+      gtag('config', 'G-W7DHGHMD7H');
     </script>
-
-    <!--[if lt IE 9]>
-      <script src="/assests/js/html5shiv.min.js"></script>
-      <script src="/assests/js/respond.min.js"></script>
-    <![endif]-->
   </body>
 </html>
