--- a/content/assets/css/main.css
+++ b/content/assets/css/main.css
@@ -1,66 +1,3 @@
-/* General stuff */
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 70px;
-}
-
-body > .container {
-  padding: 60px 15px 0;
-}
-
-blockquote {
-    font-size: 14px !important;
-}
-
-.social-icons a img {
-  margin-top: 4px;
-  width: 40px;
-}
-
-.social-icons a img.github {
-  width: 40px;
-}
-
-.social-icons a img.twitter {
-  width: 40px;
-}
-
-/* Footer stuff */
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  background-color: #f5f5f5;
-  text-align: center;
-}
-
-/* Footer ads stuff */
-ul#ads li {
-  margin-left: 0px;
-  display: -moz-inline-box;
-  -moz-box-orient: vertical;
-  display: inline-block;
-  vertical-align: middle;
-  *vertical-align: auto;
-}
-
-ul#ads li {
-  *display: inline;
-}
-
-ul#ads li:after {
-  content: " | ";
-}
-
-ul#ads li:last-of-type:after {
-  content: "";
-}
-
 /* Article styles */
 article {
   border-bottom: 1px solid #ddd;
@@ -74,31 +11,25 @@ article:last-of-type {
 }
 
 article div.entry {
-  margin-top: 5px;
+  margin-top: 10px;
 }
 
 /* Related/Comment styles */
-section#related, section#comment {
+section#related {
   margin-top: 10px;
 }
 
 ul#related_posts li {
-  margin-left: 5px;
   list-style: none;
-}
-
-div#disqus_thread iframe {
-  margin-left: 5px;
 }
 
 /* Archive styles */
 ul#archive li {
   list-style: none;
-  margin-left: 5px;
 }
 
 ul#archive h2 {
-  margin-top: 10px;
+  margin-top: 15px;
 }
 
 ul#archive h2:first-of-type {
@@ -106,10 +37,6 @@ ul#archive h2:first-of-type {
 }
 
 /* Post meta style stuff */
-article.post .meta {
-  margin-left: 5px;
-}
-
 article.post .meta img {
   margin-right: 5px;
 }
@@ -123,7 +50,7 @@ article.post .meta span:last-of-type {
 }
 
 article.post .meta ul.categories {
-  background: url('/assests/images/categories.png') left top no-repeat;
+  background: url('/assets/images/categories.png') left top no-repeat;
   padding-left : 20px;
   margin-left: 5px;
   display: inline;
@@ -173,4 +100,21 @@ ul#tags li, ul.categories li {
   padding-left: 5px;
   left: 0;
   position: absolute;
+}
+
+/* General */
+a {
+  color: rgb(51, 122, 183);
+}
+
+div.graphviz-wrapper svg {
+  max-width: 100%;
+  height: auto;
+}
+
+pre.highlight {
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 10px;
 }
