Cleanup old content

--- a/content/_layouts/default.html
+++ b/content/_layouts/default.html
@@ -44,11 +44,11 @@
         </header>
 
         <!-- Page -->
-{{ content }}
+        {{ content }}
 
         <!-- Footer -->
         <footer class="mt-2">
-          <p class="text-center text-body-secondary">Copyright 2009-{{ site.time | date: "%Y" }} <a href="http://damianzaremba.co.uk">Damian Zaremba</a></p>
+          <p class="text-center border-top pt-2">Copyright 2009-{{ site.time | date: "%Y" }} <a href="http://damianzaremba.co.uk">Damian Zaremba</a></p>
         </footer>
       </div>
     </main>
